# Manga-Banco-de-dados-2

./: README.md
banco-dados-2/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  app_cli.py  consultas_complexas.py  database.py  docker-compose.yml  entrypoint.sh  init.py  init_alembic.py  main.py  pyproject.toml
banco-dados-2/alembic/: env.py  seed_data.py
banco-dados-2/alembic/versions/: 444c89e7f4e9_estrutura_inicial_com_genero_e_.py
banco-dados-2/models/: __init__.py  avaliacao.py  capitulo.py  comentario.py  genero.py  leitor_manga.py  manga.py  manga_genero.py  usuario.py
